Disable tests related to Bug 800799 - http-on-modify-request now called after JS that started the load is no longer on the stack

--- a/tests/content/firebug.html
+++ b/tests/content/firebug.html
@@ -117,7 +117,7 @@ var testList = [
     {group: "console",            uri: "console/3663/issue3663.js",               desc: "too much recursion when logging array contains itself", testPage: "console/3663/issue3663.html"},
     {group: "console",            uri: "console/5655/issue5655.js",               desc: "console panel width empty elements", testPage: "console/5655/issue5655.html"},
     {group: "console/spy",        uri: "console/spy/2285/issue2285.js",           desc: "support for content-type: multipart/x-mixed-replace", testPage: "console/spy/2285/issue2285.html" },
-    {group: "console/spy",        uri: "console/spy/2462/issue2462.js",           desc: "The firebug console still shows the xhr in progress if you abort it (via request.abort()) ", testPage: "console/spy/2462/issue2462.html" },
+    //{group: "console/spy",        uri: "console/spy/2462/issue2462.js",           desc: "The firebug console still shows the xhr in progress if you abort it (via request.abort()) ", testPage: "console/spy/2462/issue2462.html" },
     {group: "console/spy",        uri: "console/spy/2712/issue2712.js",           desc: "Gmail has network connections that report 200 Aborted", testPage: "console/spy/2712/issue2712.html" },
     {group: "console/spy",        uri: "console/spy/2868/issue2868.js",           desc: "ajax response is not shown in the answer tab", testPage: "console/spy/2868/issue2868.html" },
     {group: "console/spy",        uri: "console/spy/4085/issue4085.js",           desc: "Errors inside an XmlHttpRequest.onReadyStateChange still fail silently", testPage: "console/spy/4085/issue4085.html" },
@@ -284,8 +284,8 @@ var testList = [
     {group: "dom",                uri: "dom/4386/issue4386.js",                   desc: "DOM breakpoints can't be deleted or disabled/enabled from within the Breakpoints Side Panel", testPage: "dom/4386/issue4386.html" },
     {group: "dom",                uri: "dom/5247/issue5247.js",                   desc: "Add reps for different types of CSSRules", testPage: "dom/5247/issue5247.html" },
     {group: "net",                uri: "net/activation/activation.js",            desc: "Verify Net panel content after activation on more tabs (Firebug opened within Firefox)." },
-    {group: "net",                uri: "net/breakpoints/breakOnXHR.js",           desc: "XHR Conditional Breakpoints", testPage: "net/breakpoints/breakOnXHR.html" },
-    {group: "net",                uri: "net/breakpoints/breakOnXHRCB.js",         desc: "XHR Conditional Breakpoints (Chromebug active)", testPage: "net/breakpoints/breakOnXHR.html" },
+    //group: "net",                uri: "net/breakpoints/breakOnXHR.js",           desc: "XHR Conditional Breakpoints", testPage: "net/breakpoints/breakOnXHR.html" },
+    //{group: "net",                uri: "net/breakpoints/breakOnXHRCB.js",         desc: "XHR Conditional Breakpoints (Chromebug active)", testPage: "net/breakpoints/breakOnXHR.html" },
     {group: "net",                uri: "net/listeners/netInfoBodyListener-1.6.js",desc: "netInfoBody listener test", testPage: "net/listeners/netInfoBodyListener-1.6.html" },
     {group: "net",                uri: "net/url-params/test.js",                  desc: "Encoded ampersands '&amp' and the Params tab.", testPage: "net/url-params/test.html" },
     {group: "net",                uri: "net/176/issue176.js",                     desc: "Issue 176: net flash tab not recognising flv files", testPage: "net/176/issue176.html" },
