--- a/tests/content/console/completion/959/issue959.html
+++ b/tests/content/console/completion/959/issue959.html
@@ -15,6 +15,8 @@ obj2 = Object.create({}, {
     aa2: { value: 1 }
 });
 obj3 = Object.create({});
+Boolean.prototype.hello = function() { alert("Hi!"); };
+Boolean.prototype.hello2 = function() { alert("Yo"); };
         </script>
     </head>
     <body>
