issue5358: Allow pasting HTML Content in the Panel

--- a/tests/content/firebug.html
+++ b/tests/content/firebug.html
@@ -194,6 +194,7 @@ var testList = [
     {group: "html",               uri: "html/4837/issue4837.js",                  desc: "Editing a node value doesn't update inside HTML panel", testPage: "html/4837/issue4837.html"},
     {group: "html",               uri: "html/5058/issue5058.js",                  desc: "Edit HTML button doesn't work", testPage: "html/5058/issue5058.html"},
     {group: "html",               uri: "html/5255/issue5255.js",                  desc: "Adding elements through Edit HTML shows them in the wrong place", testPage: "html/5255/issue5255.html"},
+    {group: "html",               uri: "html/5358/issue5358.js",                  desc: "Allow pasting HTML into the HTML panel", testPage: "html/5358/issue5358.html" },
     {group: "html",               uri: "html/5448/issue5448.js",                  desc: "normalize() breaks display of text nodes with entities", testPage: "html/5448/issue5448.html"},
     {group: "html",               uri: "html/5504/issue5504.js",                  desc: "New attributes default to undefined='undefined'", testPage: "html/5504/issue5504.html"},
     {group: "html",               uri: "html/5506/issue5506.js",                  desc: "Element path doesn't get updated when changing elements in Edit mode", testPage: "html/5506/issue5506.html" },
