FBTest: fixe test description

--- a/tests/content/firebug.html
+++ b/tests/content/firebug.html
@@ -43,7 +43,7 @@ var testList = [
     {group: "lib",                uri: "lib/storageService.js",                   desc: "Verify modules/storageService" },
     {group: "lib",                uri: "lib/textSearch.js",                       desc: "Verify FBL.TextSearch", testPage: "lib/textSearch.htm" },
     {group: "chrome",             uri: "chrome/1883/issue1883.js",                desc: "domplate.insertRows properties" },
-    {group: "domplate",           uri: "domplate/issue4425.js",                   desc: "Inspector shortcut (Ctrl+Shift+C)" },
+    {group: "domplate",           uri: "domplate/issue4425.js",                   desc: "Better support for Domplate templates inheritance" },
     {group: "firebug",            uri: "firebug/activeContextAfterReload.js",     desc: "Reloading a FF tab with Firebug open." },
     {group: "firebug",            uri: "firebug/allOpenAllClose1.5.js",           desc: "First test: all open and all close", testPage: "firebug/OpenFirebugOnThisPage.html" },
     {group: "firebug",            uri: "firebug/changeUILocation.js",             desc: "Changing Firebug UI location", testPage: "firebug/OpenFirebugOnThisPage.html" },
