FBTest: temporarily remove a test from the list

--- a/tests/content/firebug.html
+++ b/tests/content/firebug.html
@@ -49,7 +49,7 @@ var testList = [
     {group: "firebug",            uri: "firebug/changeUILocation.js",             desc: "Changing Firebug UI location", testPage: "firebug/OpenFirebugOnThisPage.html" },
     //{group: "firebug",            uri: "firebug/closeOpenOpenSwitchTabsTwice.js", desc: "Switch between two tabs, one Firebug, one not" },
     //{group: "firebug",            uri: "firebug/openDisableEnableReload.js",      desc: "Firebug opened disabled on all panels then enabled on all panels" },
-    {group: "firebug",            uri: "firebug/openInNewWindow.js",              desc: "Firebug opened in a new window", testPage: "script/1483/issue1483.html" },
+    //{group: "firebug",            uri: "firebug/openInNewWindow.js",              desc: "Firebug opened in a new window", testPage: "script/1483/issue1483.html" },
     {group: "firebug",            uri: "firebug/openNotOpenClose.js",             desc: "Opening Pages but not Firebug." },
     {group: "firebug",            uri: "firebug/openOnLocalPage.js",              desc: "Firebug opened on a file://... page should stay open even after refresh." },
     {group: "firebug",            uri: "firebug/openOpenCloseClose.js",           desc: "Opening and Closing Pages and Firebug." },
