--- a/tests/content/firebug.html
+++ b/tests/content/firebug.html
@@ -47,9 +47,9 @@ var testList = [
     {group: "firebug",            uri: "firebug/activeContextAfterReload.js",     desc: "Reloading a FF tab with Firebug open." },
     {group: "firebug",            uri: "firebug/allOpenAllClose1.5.js",           desc: "First test: all open and all close", testPage: "firebug/OpenFirebugOnThisPage.html" },
     {group: "firebug",            uri: "firebug/changeUILocation.js",             desc: "Changing Firebug UI location", testPage: "firebug/OpenFirebugOnThisPage.html" },
-    //{group: "firebug",            uri: "firebug/closeOpenOpenSwitchTabsTwice.js", desc: "Switch between two tabs, one Firebug, one not" },
-    //{group: "firebug",            uri: "firebug/openDisableEnableReload.js",      desc: "Firebug opened disabled on all panels then enabled on all panels" },
-    //{group: "firebug",            uri: "firebug/openInNewWindow.js",              desc: "Firebug opened in a new window", testPage: "script/1483/issue1483.html" },
+    {group: "firebug",            uri: "firebug/closeOpenOpenSwitchTabsTwice.js", desc: "Switch between two tabs, one Firebug, one not" },
+    {group: "firebug",            uri: "firebug/openDisableEnableReload.js",      desc: "Firebug opened disabled on all panels then enabled on all panels" },
+    {group: "firebug",            uri: "firebug/openInNewWindow.js",              desc: "Firebug opened in a new window", testPage: "script/1483/issue1483.html" },
     {group: "firebug",            uri: "firebug/openNotOpenClose.js",             desc: "Opening Pages but not Firebug." },
     {group: "firebug",            uri: "firebug/openOnLocalPage.js",              desc: "Firebug opened on a file://... page should stay open even after refresh." },
     {group: "firebug",            uri: "firebug/openOpenCloseClose.js",           desc: "Opening and Closing Pages and Firebug." },
@@ -250,7 +250,7 @@ var testList = [
     {group: "script",             uri: "script/3918/AsyncJSD.js",                 desc: "Async JSD for FF4.0", testPage: "script/3918/AsyncJSDPage.html"},
     {group: "script",             uri: "script/3985/issue3985.js",                desc: "Can't break on code inserted twice using iframes, in one iframe", testPage: "script/3985/issue3985.html"},
     {group: "script",             uri: "script/4213/issue4213.js",                desc: "Script panel's location button is not updated", testPage: "script/4213/issue4213.html"},
-    {group: "script",             uri: "script/4724/issue4724.js",                desc: "&quot;Disable Breakpoint&quot; is not checked on disabled breakpoints", testPage: "script/4724/issue4724.html"},
+    //{group: "script",             uri: "script/4724/issue4724.js",                desc: "&quot;Disable Breakpoint&quot; is not checked on disabled breakpoints", testPage: "script/4724/issue4724.html"},
     {group: "script",             uri: "script/4816/issue4816.js",                desc: "Script panel claims No JavaScript when it means you're stopped on a breakpoint on some other tab", testPage: "script/4816/issue4816.html"},
     {group: "script",             uri: "script/4818/issue4818.js",                desc: "frame.eval fails for everthing but the newest frame of the stack", testPage: "script/4818/issue4818.html"},
     {group: "script",             uri: "script/4932/issue4932.js",                desc: "The Script panel shows No Javascript on this page even if they are scripts within an iframe", testPage: "script/4932/issue4932.html"},
