FBTestL: enable temporarily disabled test, failure problem seems to be solved

--- a/tests/content/firebug.html
+++ b/tests/content/firebug.html
@@ -118,7 +118,7 @@ var testList = [
     {group: "console",            uri: "console/5655/issue5655.js",               desc: "console panel width empty elements", testPage: "console/5655/issue5655.html"},
     {group: "console",            uri: "console/5135/issue5135.js",               desc: "   Display window.postMessage() calls in console", testPage: "console/5135/issue5135.html"},
     {group: "console/spy",        uri: "console/spy/2285/issue2285.js",           desc: "support for content-type: multipart/x-mixed-replace", testPage: "console/spy/2285/issue2285.html" },
-    //{group: "console/spy",        uri: "console/spy/2462/issue2462.js",           desc: "The firebug console still shows the xhr in progress if you abort it (via request.abort()) ", testPage: "console/spy/2462/issue2462.html" },
+    {group: "console/spy",        uri: "console/spy/2462/issue2462.js",           desc: "The firebug console still shows the xhr in progress if you abort it (via request.abort()) ", testPage: "console/spy/2462/issue2462.html" },
     {group: "console/spy",        uri: "console/spy/2712/issue2712.js",           desc: "Gmail has network connections that report 200 Aborted", testPage: "console/spy/2712/issue2712.html" },
     {group: "console/spy",        uri: "console/spy/2868/issue2868.js",           desc: "ajax response is not shown in the answer tab", testPage: "console/spy/2868/issue2868.html" },
     {group: "console/spy",        uri: "console/spy/4085/issue4085.js",           desc: "Errors inside an XmlHttpRequest.onReadyStateChange still fail silently", testPage: "console/spy/4085/issue4085.html" },
