--- a/tests/content/firebug.html
+++ b/tests/content/firebug.html
@@ -324,9 +324,10 @@ var testList = [
     {group: "net",                uri: "net/4905/issue4905.js",                   desc: "Show the \"Connection\" header in the network/headers part", testPage: "net/4905/issue4905.html" },
     {group: "net",                uri: "net/5004/issue5004.js",                   desc: "Only raw http post request parameters view", testPage: "net/5004/issue5004.html" },
     {group: "net",                uri: "net/5007/issue5007.js",                   desc: "Headers from POST request body are not displayed anymore", testPage: "net/5007/issue5007.html" },
+    {group: "net",                uri: "net/5324/issue5324.js",                   desc: "SPDY support in the Net panel", testPage: "net/5324/issue5324.html" },
     {group: "net",                uri: "net/5592/issue5592.js",                   desc: "Add option to copy request parameters", testPage: "net/5592/issue5592.html" },
     {group: "net",                uri: "net/5714/issue5714.js",                   desc: "Can't resend requests", testPage: "net/5714/issue5714.html" },
-    {group: "net",                uri: "net/5324/issue5324.js",                   desc: "SPDY support in the Net panel", testPage: "net/5324/issue5324.html" },
+    {group: "net",                uri: "net/5742/issue5742.js",                   desc: "\"(null)\" is added to the XPath string in the tooltip text of an XML response", testPage: "net/5742/issue5742.html" },
     {group: "cookies",            uri: "cookies/general/cookiesPanel.js",         desc: "Existence of cookie panel", testPage: "cookies/general/cookiesPanel.html" },
     {group: "cookies",            uri: "cookies/general/cookieInfo.js",           desc: "Existence of cookie info", testPage: "cookies/general/cookieInfo.php" },
     {group: "cookies",            uri: "cookies/general/clipboard.js",            desc: "Clipboard functionality for the Cookies panel (copy and paste)", testPage: "cookies/general/clipboard.php" },
