--- a/tests/content/firebug.html
+++ b/tests/content/firebug.html
@@ -117,7 +117,8 @@ var testList = [
     {group: "console",            uri: "console/3663/issue3663.js",               desc: "too much recursion when logging array contains itself", testPage: "console/3663/issue3663.html"},
     {group: "console",            uri: "console/5135/issue5135.js",               desc: "Display window.postMessage() calls in console", testPage: "console/5135/issue5135.html"},
     {group: "console",            uri: "console/5655/issue5655.js",               desc: "console panel width empty elements", testPage: "console/5655/issue5655.html"},
-    {group: "console",            uri: "console/5945/issue5945.js",               desc: "Show source link for CSS errors", testPage: "console/5945/issue5945.html"},
+    // Moved into known failures.
+    //{group: "console",            uri: "console/5945/issue5945.js",               desc: "Show source link for CSS errors", testPage: "console/5945/issue5945.html"},
     {group: "console/spy",        uri: "console/spy/2285/issue2285.js",           desc: "support for content-type: multipart/x-mixed-replace", testPage: "console/spy/2285/issue2285.html" },
     //{group: "console/spy",        uri: "console/spy/2462/issue2462.js",           desc: "The firebug console still shows the xhr in progress if you abort it (via request.abort()) ", testPage: "console/spy/2462/issue2462.html" },
     {group: "console/spy",        uri: "console/spy/2712/issue2712.js",           desc: "Gmail has network connections that report 200 Aborted", testPage: "console/spy/2712/issue2712.html" },
@@ -327,7 +328,8 @@ var testList = [
     {group: "net",                uri: "net/5324/issue5324.js",                   desc: "SPDY support in the Net panel", testPage: "net/5324/issue5324.html" },
     {group: "net",                uri: "net/5592/issue5592.js",                   desc: "Add option to copy request parameters", testPage: "net/5592/issue5592.html" },
     {group: "net",                uri: "net/5714/issue5714.js",                   desc: "Can't resend requests", testPage: "net/5714/issue5714.html" },
-    {group: "net",                uri: "net/5742/issue5742.js",                   desc: "\"(null)\" is added to the XPath string in the tooltip text of an XML response", testPage: "net/5742/issue5742.html" },
+    // Moved into known failures.
+    //{group: "net",                uri: "net/5742/issue5742.js",                   desc: "\"(null)\" is added to the XPath string in the tooltip text of an XML response", testPage: "net/5742/issue5742.html" },
     {group: "cookies",            uri: "cookies/general/cookiesPanel.js",         desc: "Existence of cookie panel", testPage: "cookies/general/cookiesPanel.html" },
     {group: "cookies",            uri: "cookies/general/cookieInfo.js",           desc: "Existence of cookie info", testPage: "cookies/general/cookieInfo.php" },
     {group: "cookies",            uri: "cookies/general/clipboard.js",            desc: "Clipboard functionality for the Cookies panel (copy and paste)", testPage: "cookies/general/clipboard.php" },
