--- a/tests/content/firebug.html
+++ b/tests/content/firebug.html
@@ -289,8 +289,8 @@ var testList = [
     {group: "dom",                uri: "dom/4386/issue4386.js",                   desc: "DOM breakpoints can't be deleted or disabled/enabled from within the Breakpoints Side Panel", testPage: "dom/4386/issue4386.html" },
     {group: "dom",                uri: "dom/5247/issue5247.js",                   desc: "Add reps for different types of CSSRules", testPage: "dom/5247/issue5247.html" },
     {group: "net",                uri: "net/activation/activation.js",            desc: "Verify Net panel content after activation on more tabs (Firebug opened within Firefox)." },
-    //group: "net",                uri: "net/breakpoints/breakOnXHR.js",           desc: "XHR Conditional Breakpoints", testPage: "net/breakpoints/breakOnXHR.html" },
-    //{group: "net",                uri: "net/breakpoints/breakOnXHRCB.js",         desc: "XHR Conditional Breakpoints (Chromebug active)", testPage: "net/breakpoints/breakOnXHR.html" },
+    {group: "net",                uri: "net/breakpoints/breakOnXHR.js",           desc: "XHR Conditional Breakpoints", testPage: "net/breakpoints/breakOnXHR.html" },
+    {group: "net",                uri: "net/breakpoints/breakOnXHRCB.js",         desc: "XHR Conditional Breakpoints (Chromebug active)", testPage: "net/breakpoints/breakOnXHR.html" },
     {group: "net",                uri: "net/listeners/netInfoBodyListener-1.6.js",desc: "netInfoBody listener test", testPage: "net/listeners/netInfoBodyListener-1.6.html" },
     {group: "net",                uri: "net/url-params/test.js",                  desc: "Encoded ampersands '&amp' and the Params tab.", testPage: "net/url-params/test.html" },
     {group: "net",                uri: "net/176/issue176.js",                     desc: "Issue 176: net flash tab not recognising flv files", testPage: "net/176/issue176.html" },
