--- a/tests/content/firebug.html
+++ b/tests/content/firebug.html
@@ -120,6 +120,7 @@ var testList = [
     // Moved into known failures.
     //{group: "console",            uri: "console/5945/issue5945.js",               desc: "Show source link for CSS errors", testPage: "console/5945/issue5945.html"},
     {group: "console",            uri: "console/6104/issue6104.js",               desc: "Firebug should display DOMTokenList content", testPage: "console/6104/issue6104.html"},
+    {group: "console",            uri: "console/5786/issue5786.js",               desc: "Show array-like objects differently than actual arrays", testPage: "console/5786/issue5786.html"},
     {group: "console/spy",        uri: "console/spy/2285/issue2285.js",           desc: "support for content-type: multipart/x-mixed-replace", testPage: "console/spy/2285/issue2285.html" },
     //{group: "console/spy",        uri: "console/spy/2462/issue2462.js",           desc: "The firebug console still shows the xhr in progress if you abort it (via request.abort()) ", testPage: "console/spy/2462/issue2462.html" },
     {group: "console/spy",        uri: "console/spy/2712/issue2712.js",           desc: "Gmail has network connections that report 200 Aborted", testPage: "console/spy/2712/issue2712.html" },
