FBTest move one test into known-failures list

--- a/tests/content/firebug.html
+++ b/tests/content/firebug.html
@@ -217,7 +217,7 @@ var testList = [
     {group: "css",                uri: "css/3673/issue3673.js",                   desc: "warnings from FirebugReps.Warning should have coresponding actions", testPage: "css/3673/issue3673.html"},
     {group: "css",                uri: "css/3688/issue3688.js",                   desc: "The CSS panel is sometimes displaying styles coming from Firebug", testPage: "css/3688/issue3688.html"},
     {group: "css",                uri: "css/3688/issue3688-2.js",                 desc: "The CSS panel is sometimes displaying styles coming from Firebug", testPage: "css/3688/issue3688-2.html"},
-    {group: "css",                uri: "css/4180/issue4180.js", category:"fails", desc: "Incorrect background value order", testPage: "css/4180/issue4180.html"},
+    //{group: "css",                uri: "css/4180/issue4180.js", category:"fails", desc: "Incorrect background value order", testPage: "css/4180/issue4180.html"},
     {group: "css",                uri: "css/4411/issue4411.js",                   desc: "No infotip for rgba, hsl and hsla CSS color values", testPage: "css/4411/issue4411.html"},
     {group: "css",                uri: "css/4460/issue4460.js",                   desc: "Add CSS3 box-sizing property to Layout side panel", testPage: "css/4460/issue4460.html"},
     {group: "css",                uri: "css/4543/issue4543.js",                   desc: "Don't jump to next CSS property value's inline editor, if a semicolon is entered inside a string", testPage: "css/4543/issue4543.html"},
