--- a/tests/content/known-failures.html
+++ b/tests/content/known-failures.html
@@ -38,6 +38,7 @@ var serverURI = driverBaseURI;
 var testList = [
     {group: "console/spy",        uri: "console/spy/2462/issue2462.js",           desc: "The firebug console still shows the xhr in progress if you abort it (via request.abort()) ", testPage: "console/spy/2462/issue2462.html" },
     {group: "net",                uri: "net/5742/issue5742.js",                   desc: "\"(null)\" is added to the XPath string in the tooltip text of an XML response", testPage: "net/5742/issue5742.html" },
+    {group: "net",                uri: "net/4905/issue4905.js",                   desc: "Show the \"Connection\" header in the network/headers part", testPage: "net/4905/issue4905.html" },
     {group: "console",            uri: "console/5945/issue5945.js",               desc: "Show source link for CSS errors", testPage: "console/5945/issue5945.html"},
     {group: "css",                uri: "css/4180/issue4180.js",                   desc: "Incorrect background value order", testPage: "css/4180/issue4180.html"},
 ];
