--- a/tests/content/firebug.html
+++ b/tests/content/firebug.html
@@ -182,6 +182,7 @@ var testList = [
     {group: "commandLine",        uri: "commandLine/5042/issue5042.js",           desc: "Issue 5042: Command Line should not prevent tabbing out when empty", testPage: "commandLine/5042/issue5042.html"},
     {group: "commandLine",        uri: "commandLine/5130/issue5130.js",           desc: "Array indices are sorted alphabetically instead of numerically", testPage: "commandLine/5130/issue5130.html"},
     {group: "commandLine",        uri: "commandLine/5779/issue5779.js",           desc: "Allow to set the root element in $ and $$", testPage: "commandLine/5779/issue5779.html"},
+    {group: "commandLine",        uri: "commandLine/5873/issue5873.js",           desc: "Issue 5873: Integrate FireClosure", testPage: "commandLine/5873/issue5873.html"},
     {group: "commandLine",        uri: "commandLine/5878/issue5878.js",           desc: "Issue 5878: proposal for a command line method: include(url)", testPage: "commandLine/5878/issue5878.html"},
     {group: "commandLine",        uri: "commandLine/5951/issue5951.js",           desc: "Title of array-like objects should be clickable", testPage: "commandLine/5951/issue5951.html"},
     {group: "html",               uri: "html/breakpoints/breakOnElement.js",      desc: "Mutation breakpoints test", testPage: "html/breakpoints/breakOnElement.html"},
