--- a/tests/content/firebug.html
+++ b/tests/content/firebug.html
@@ -252,7 +252,7 @@ var testList = [
     {group: "script",             uri: "script/3400/issue3400.js",                desc: "Issue 3400: Debugger buttons not visible when long stack trace", testPage: "script/3400/issue3400.html"},
     {group: "script",             uri: "script/3402/issue3402.js",                desc: "Issue 3402: Can't create/remove a breakpoint", testPage: "script/3402/issue3402.html"},
     {group: "script",             uri: "script/3918/AsyncJSD.js",                 desc: "Async JSD for FF4.0", testPage: "script/3918/AsyncJSDPage.html"},
-    //{group: "script",             uri: "script/3985/issue3985.js",                desc: "Can't break on code inserted twice using iframes, in one iframe", testPage: "script/3985/issue3985.html"},
+    {group: "script",             uri: "script/3985/issue3985.js",                desc: "Can't break on code inserted twice using iframes, in one iframe", testPage: "script/3985/issue3985.html"},
     {group: "script",             uri: "script/4213/issue4213.js",                desc: "Script panel's location button is not updated", testPage: "script/4213/issue4213.html"},
     //{group: "script",             uri: "script/4724/issue4724.js",                desc: "&quot;Disable Breakpoint&quot; is not checked on disabled breakpoints", testPage: "script/4724/issue4724.html"},
     {group: "script",             uri: "script/4816/issue4816.js",                desc: "Script panel claims No JavaScript when it means you're stopped on a breakpoint on some other tab", testPage: "script/4816/issue4816.html"},
