--- a/tests/content/firebug.html
+++ b/tests/content/firebug.html
@@ -129,6 +129,7 @@ var testList = [
     {group: "console/spy",        uri: "console/spy/4738/issue4738.js",           desc: "Open in new tab opens wrong url when reusing XMLHttpRequest objects", testPage: "console/spy/4738/issue4738.html" },
     {group: "console/spy",        uri: "console/spy/4171/issue4171.js",           desc: "Expanding an XMLHttpRequest in Console tab before it ends makes JSON tab disappear", testPage: "console/spy/4171/issue4171.html" },
     {group: "console/spy",        uri: "console/spy/5049/issue5049.js",           desc: "onreadystatechange fails for back-to-back XMLHTTP requests", testPage: "console/spy/5049/issue5049.html" },
+    {group: "console/spy",        uri: "console/spy/4009/issue4009.js",           desc: "XHR messages are different in the Net and Console panel", testPage: "console/spy/4009/issue4009.html" },
     {group: "console/api",        uri: "console/api/assert.js",                   desc: "Test for console.assert API.", testPage: "console/api/assert.html" },
     {group: "console/api",        uri: "console/api/clear.js",                    desc: "Test for console.clear API.", testPage: "console/api/clear.html" },
     {group: "console/api",        uri: "console/api/count.js",                    desc: "Test for console.count API.", testPage: "console/api/count.html" },
