FBTest for issue 6281 (Placeholder rules are no longer displayed in HTML Style tab.) http://code.google.com/p/fbug/issues/detail?id=6281
Conflicts:
	tests/content/firebug.html

--- a/tests/content/firebug.html
+++ b/tests/content/firebug.html
@@ -235,6 +235,7 @@ var testList = [
     {group: "css",                uri: "css/5461/issue5461.js",                   desc: "When copying selected parts from Style side panel don't copy source link or inherited styles header", testPage: "css/5461/issue5461.html"},
     {group: "css",                uri: "css/5469/issue5469.js",                   desc: "Add units when changing the length '0' with up/down keys", testPage: "css/5469/issue5469.html"},
     {group: "css",                uri: "css/5644/issue5644.js",                   desc: "Editing a disabled property makes another", testPage: "css/5644/issue5644.html"},
+    {group: "css",                uri: "css/6281/issue6281.js",                   desc: "Placeholder rules are no longer displayed in HTML Style tab.", testPage: "css/6281/issue6281.html"},
     {group: "css",                uri: "css/6282/issue6282.js",                   desc: "CSS panel fails on interpreting @page", testPage: "css/6282/issue6282.html"},
     {group: "css/computed",       uri: "css/computed/3207/issue3207.js",          desc: "CSS properties in the \"Computed\" tab are not updated correctly", testPage: "css/computed/3207/issue3207.html"},
     {group: "css/computed",       uri: "css/computed/4132/issue4132.js",          desc: "Only show applied styles in Computed side panel", testPage: "css/computed/4132/issue4132.html"},
