--- a/tests/content/firebug.html
+++ b/tests/content/firebug.html
@@ -238,6 +238,7 @@ var testList = [
     {group: "css",                uri: "css/5956/issue5956.js",                   desc: "Allow copying single CSS properties", testPage: "css/5956/issue5956.html"},
     {group: "css",                uri: "css/6281/issue6281.js",                   desc: "Placeholder rules are no longer displayed in HTML Style tab.", testPage: "css/6281/issue6281.html"},
     {group: "css",                uri: "css/6282/issue6282.js",                   desc: "CSS panel fails on interpreting @page", testPage: "css/6282/issue6282.html"},
+    {group: "css/style",          uri: "css/style/5654/issue5654.js",             desc: "Style side panel doesn't display CSS rules after reload", testPage: "css/style/5654/issue5654.html"},
     {group: "css/computed",       uri: "css/computed/3207/issue3207.js",          desc: "CSS properties in the \"Computed\" tab are not updated correctly", testPage: "css/computed/3207/issue3207.html"},
     {group: "css/computed",       uri: "css/computed/4132/issue4132.js",          desc: "Only show applied styles in Computed side panel", testPage: "css/computed/4132/issue4132.html"},
     {group: "css/computed",       uri: "css/computed/5449/issue5449.js",          desc: "Show infotips in Computed side panel", testPage: "css/computed/5449/issue5449.html"},
