--- a/tests/content/firebug.html
+++ b/tests/content/firebug.html
@@ -297,6 +297,7 @@ var testList = [
     {group: "dom",                uri: "dom/4386/issue4386.js",                   desc: "DOM breakpoints can't be deleted or disabled/enabled from within the Breakpoints Side Panel", testPage: "dom/4386/issue4386.html" },
     {group: "dom",                uri: "dom/5247/issue5247.js",                   desc: "Add reps for different types of CSSRules", testPage: "dom/5247/issue5247.html" },
     {group: "dom",                uri: "dom/6283/issue6283.js",                   desc: "Console and DOM panel fail on interpreting @page", testPage: "dom/6283/issue6283.html" },
+    {group: "dom",                uri: "dom/sidePanel/sidePanel.js",              desc: "Existence of the side panel", testPage: "dom/sidePanel/sidePanel.html" },
     {group: "net",                uri: "net/activation/activation.js",            desc: "Verify Net panel content after activation on more tabs (Firebug opened within Firefox)." },
     {group: "net",                uri: "net/breakpoints/breakOnXHR.js",           desc: "XHR Conditional Breakpoints", testPage: "net/breakpoints/breakOnXHR.html" },
     {group: "net",                uri: "net/breakpoints/breakOnXHRCB.js",         desc: "XHR Conditional Breakpoints (Chromebug active)", testPage: "net/breakpoints/breakOnXHR.html" },
