--- a/tests/content/firebug.html
+++ b/tests/content/firebug.html
@@ -239,6 +239,7 @@ var testList = [
     {group: "css",                uri: "css/5644/issue5644.js",                   desc: "Editing a disabled property makes another", testPage: "css/5644/issue5644.html"},
     {group: "css",                uri: "css/6281/issue6281.js",                   desc: "Placeholder rules are no longer displayed in HTML Style tab.", testPage: "css/6281/issue6281.html"},
     {group: "css",                uri: "css/6282/issue6282.js",                   desc: "CSS panel fails on interpreting @page", testPage: "css/6282/issue6282.html"},
+    {group: "css",                uri: "css/4893/issue4893.js",                   desc: "   CSS panel doesn't display contents of CSS file after reload", testPage: "css/4893/issue4893.html"},
     {group: "css/computed",       uri: "css/computed/3207/issue3207.js",          desc: "CSS properties in the \"Computed\" tab are not updated correctly", testPage: "css/computed/3207/issue3207.html"},
     {group: "css/computed",       uri: "css/computed/4132/issue4132.js",          desc: "Only show applied styles in Computed side panel", testPage: "css/computed/4132/issue4132.html"},
     {group: "css/computed",       uri: "css/computed/5449/issue5449.js",          desc: "Show infotips in Computed side panel", testPage: "css/computed/5449/issue5449.html"},
