--- a/tests/content/firebug.html
+++ b/tests/content/firebug.html
@@ -84,10 +84,10 @@ var testList = [
     {group: "console",            uri: "console/onreadystatechange.js",           desc: "Log an onreadystatechange function." },
     {group: "console",            uri: "console/panelContentAfterDisable1.6.js",  desc: "If console panel is disabled command line must be hidden." },
     {group: "console",            uri: "console/panelContentAfterReopen.js",      desc: "Preserve Panel Content When Firebug UI Is Closed And Opened Again.", testPage: "console/panelContentAfterReopen.html"},
-    {group: "console",            uri: "console/reps/console_array.js",           desc: "Rendering of Array and Array-like objects.", testPage: "console/reps/console_array.html" },
+    {group: "console",            uri: "console/reps/arrayDisplay.js",            desc: "Display of arrays and array-like objects", testPage: "console/reps/arrayDisplay.html" },
     {group: "console",            uri: "console/testErrors.js",                   desc: "Various errors must be properly logged into the Console panel.", testPage: "console/testErrors.html" },
     {group: "console",            uri: "console/766/issue766.js",                 desc: "Issue 766: console.log(hash)", testPage: "console/766/issue766.html"},
-    {group: "console",            uri: "console/872/872.js",                      desc: "Show errors from reloaded iframes", testPage: "console/872/main.html" },
+    {group: "console",            uri: "console/872/issue872.js",                 desc: "Refreshing an iframe doesn't show its errors", testPage: "console/872/issue872.html" },
     {group: "console",            uri: "console/882/issue882.js",                 desc: "Issue 882: console.log() reports wrong source file and line number", testPage: "console/882/issue882.html"},
     {group: "console",            uri: "console/1495/issue1495.js",               desc: "Issue1495: No more ajax response for a while", testPage: "console/1495/issue1495.html" },
     {group: "console",            uri: "console/issue1591.js",                    desc: "Issue 1591: Firebug cannot find _firebugConsole element." },
