FBTest: move firebug/2613 test into known-failures test list (bug 854139)

--- a/tests/content/firebug.html
+++ b/tests/content/firebug.html
@@ -55,7 +55,7 @@ var testList = [
     {group: "firebug",            uri: "firebug/openOpenCloseClose.js",           desc: "Opening and Closing Pages and Firebug." },
     {group: "firebug",            uri: "firebug/selectedPanelAfterReopen.js",     desc: "Selected panel should be still selected if Firebug UI is reopened.", testPage: "firebug/OpenFirebugOnThisPage.html"},
     {group: "firebug",            uri: "firebug/viralActivation.js",              desc: "Links from active pages should be active", testPage: "firebug/OpenFirebugOnThisPage.html" },
-    {group: "firebug",            uri: "firebug/2613/issue2613.js",               desc: "HTML, CSS, and DOM panels do not display on reload.", testPage: "firebug/2613/issue2613.html" },
+    //{group: "firebug",            uri: "firebug/2613/issue2613.js",               desc: "HTML, CSS, and DOM panels do not display on reload.", testPage: "firebug/2613/issue2613.html" },
     {group: "firebug",            uri: "firebug/4040/issue4040.js",               desc: "Switching to a about:blank page does not update the panels", testPage: "firebug/4040/issue4040.html" },
     {group: "firebug",            uri: "firebug/4153/issue4153.js",               desc: "Re-attaching detached, deactivated Firebug UI doesn't close it", testPage: "firebug/4153/issue4153.html" },
     {group: "firebug",            uri: "firebug/4553/issue4553.js",               desc: "iframe should be content-primary", testPage: "firebug/4553/issue4553.html" },
